--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,40 @@
 name: Deploy to Vercel
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Git ref to deploy'
+        required: false
+        default: 'main'
+      force_deploy:
+        description: 'Force deployment (skip gatekeeper check)'
+        required: false
+        type: boolean
+        default: false
+  workflow_call:
+    inputs:
+      ref:
+        description: 'Git ref to deploy'
+        required: false
+        type: string
+        default: 'main'
+      force_deploy:
+        description: 'Force deployment'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Deploy job - can be forced or called from gatekeeper
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        ref: ${{ inputs.ref || github.ref }}
       
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -19,13 +42,42 @@ jobs:
         node-version: '20.x'
         cache: 'npm'
         
-    - name: Install dependencies
-      run: npm ci
+    - name: Install dependencies with retry
+      run: |
+        for i in {1..3}; do
+          echo "Attempt $i to install dependencies..."
+          if npm ci --prefer-offline --no-audit; then
+            echo "Dependencies installed successfully!"
+            break
+          else
+            echo "Attempt $i failed, retrying in 10 seconds..."
+            sleep 10
+          fi
+          if [ $i -eq 3 ]; then
+            echo "All attempts failed"
+            exit 1
+          fi
+        done
       
     - name: Build application
       run: npm run build
       
+    - name: Check if Vercel secrets are configured
+      run: |
+        if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then
+          echo "⚠️  VERCEL_TOKEN not configured - skipping Vercel deployment"
+          echo "To enable Vercel deployment, add these secrets to your GitHub repository:"
+          echo "- VERCEL_TOKEN: Your Vercel API token"
+          echo "- ORG_ID: Your Vercel organization ID"
+          echo "- PROJECT_ID: Your Vercel project ID"
+          echo "SKIP_VERCEL=true" >> $GITHUB_ENV
+        else
+          echo "✅ Vercel secrets configured - proceeding with deployment"
+          echo "SKIP_VERCEL=false" >> $GITHUB_ENV
+        fi
+      
     - name: Deploy to Vercel
+      if: env.SKIP_VERCEL == 'false'
       uses: amondnet/vercel-action@v25
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -33,3 +85,13 @@ jobs:
         vercel-org-id: ${{ secrets.ORG_ID }}
         vercel-project-id: ${{ secrets.PROJECT_ID }}
         working-directory: ./
+        
+    - name: Alternative deployment info
+      if: env.SKIP_VERCEL == 'true'
+      run: |
+        echo "🚀 Build completed successfully!"
+        echo "📦 Your application is ready for deployment"
+        echo "To deploy manually:"
+        echo "1. Run 'npm run build' locally"
+        echo "2. Deploy the .next/ folder to your hosting provider"
+        echo "3. Or configure Vercel secrets for automatic deployment"
