--- a/.github/workflows/gatekeeper.yml
+++ b/.github/workflows/gatekeeper.yml
@@ -8,7 +8,7 @@ on:
         required: false
         default: 'main'
       run_workflows:
-        description: 'Workflows to run (comma-separated: test1,test2,test3,ci,security,deploy or all)'
+        description: 'Workflows to run'
         required: false
         default: 'all'
       force_deploy:
@@ -71,13 +71,16 @@ jobs:
   deploy:
     name: "Deploy: Vercel 🚀"
     needs: [ci, security]
-    if: ${{ 
-      (github.ref == 'refs/heads/main' || github.event.inputs.ref == 'main') && 
+    if: >
+      (github.ref == 'refs/heads/main' || github.event.inputs.ref == 'main') &&
       (
-        (!failure() && !cancelled() && (contains(github.event.inputs.run_workflows, 'deploy') || contains(github.event.inputs.run_workflows, 'all') || github.event_name != 'workflow_dispatch')) ||
+        (!failure() && !cancelled() && 
+         (contains(github.event.inputs.run_workflows, 'deploy') || 
+          contains(github.event.inputs.run_workflows, 'all') || 
+          github.event_name != 'workflow_dispatch')
+        ) ||
         github.event.inputs.force_deploy == 'true'
       )
-    }}
     uses: ./.github/workflows/deploy.yml
     with:
       ref: ${{ github.event.inputs.ref || github.ref }}
