--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -52,7 +52,31 @@ jobs:
       run: npm ci
       
     - name: Run security audit
-      run: npm audit --audit-level high
+      run: |
+        echo "🔒 Running security audit..."
+        npm audit --audit-level high --json > audit-results.json || true
+        
+        # Check if there are any high/critical vulnerabilities
+        HIGH_VULNS=$(jq '.metadata.vulnerabilities.high // 0' audit-results.json)
+        CRITICAL_VULNS=$(jq '.metadata.vulnerabilities.critical // 0' audit-results.json)
+        
+        echo "High vulnerabilities: $HIGH_VULNS"
+        echo "Critical vulnerabilities: $CRITICAL_VULNS"
+        
+        # Display human-readable report
+        npm audit --audit-level high || echo "⚠️ Vulnerabilities found - see details above"
+        
+        # Only fail on critical vulnerabilities for now
+        if [ "$CRITICAL_VULNS" -gt 0 ]; then
+          echo "❌ Critical vulnerabilities found! Please update packages."
+          echo "Run 'npm audit fix' or manually update vulnerable packages."
+          exit 1
+        elif [ "$HIGH_VULNS" -gt 0 ]; then
+          echo "⚠️ High-level vulnerabilities found but not failing build."
+          echo "Consider updating packages when possible."
+        else
+          echo "✅ No high or critical vulnerabilities found!"
+        fi
       
     - name: Run dependency check
       run: npx depcheck
