--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   },
   "scripts": {
     "dev": "next dev --turbo",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "axios": "^1.7.7",
+    "axios": "^1.8.2",
     "better-sqlite3": "^11.3.0",
     "chart.js": "^4.4.5",
     "class-variance-authority": "^0.7.0",
@@ -27,7 +27,7 @@
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^11.0.1",
     "lucide-react": "^0.381.0",
-    "next": "^14.2.15",
+    "next": "^15.1.5",
     "node-fetch": "^3.3.2",
     "node-gyp": "^10.2.0",
     "react": "^18",
