updated the dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,12 @@ jobs:
       run: |
         for i in {1..3}; do
           echo "Attempt $i to install dependencies..."
-          if npm ci --prefer-offline --no-audit; then
-            echo "Dependencies installed successfully!"
+          # First try npm ci, if it fails due to lock file mismatch, use npm install
+          if npm ci --prefer-offline --no-audit 2>/dev/null; then
+            echo "Dependencies installed successfully with npm ci!"
+            break
+          elif npm install --prefer-offline --no-audit; then
+            echo "Dependencies installed successfully with npm install!"
             break
           else
             echo "Attempt $i failed, retrying in 10 seconds..."
@@ -88,7 +92,7 @@ jobs:
         key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
         
     - name: Install dependencies (if cache miss)
-      run: npm ci --prefer-offline --no-audit
+      run: npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
       
     - name: Run ESLint
       run: npm run lint
@@ -120,7 +124,7 @@ jobs:
         key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
         
     - name: Install dependencies (if cache miss)
-      run: npm ci --prefer-offline --no-audit
+      run: npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
       
     - name: TypeScript type check
       run: npx tsc --noEmit
@@ -152,7 +156,7 @@ jobs:
         key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
         
     - name: Install dependencies (if cache miss)
-      run: npm ci --prefer-offline --no-audit
+      run: npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
       
     - name: Build Next.js application
       run: npm run build
