--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,12 @@ jobs:
       run: |
         for i in {1..3}; do
           echo "Attempt $i to install dependencies..."
-          if npm ci --prefer-offline --no-audit; then
-            echo "Dependencies installed successfully!"
+          # First try npm ci, if it fails due to lock file mismatch, use npm install
+          if npm ci --prefer-offline --no-audit 2>/dev/null; then
+            echo "Dependencies installed successfully with npm ci!"
+            break
+          elif npm install --prefer-offline --no-audit; then
+            echo "Dependencies installed successfully with npm install!"
             break
           else
             echo "Attempt $i failed, retrying in 10 seconds..."
