--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Vercel
+name: Deploy - Vercel Deployment
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
         required: false
         default: 'main'
       force_deploy:
-        description: 'Force deployment (skip gatekeeper check)'
+        description: 'Force deployment'
         required: false
         type: boolean
         default: false
@@ -27,8 +27,8 @@ on:
 
 jobs:
   deploy:
+    name: "🚀 Deploy to Vercel"
     runs-on: ubuntu-latest
-    # Deploy job - can be forced or called from gatekeeper
     
     steps:
     - name: Checkout code
@@ -42,31 +42,13 @@ jobs:
         node-version: '20.x'
         cache: 'npm'
         
-    - name: Install dependencies with retry
-      run: |
-        for i in {1..3}; do
-          echo "Attempt $i to install dependencies..."
-          # First try npm ci, if it fails due to lock file mismatch, use npm install
-          if npm ci --prefer-offline --no-audit 2>/dev/null; then
-            echo "Dependencies installed successfully with npm ci!"
-            break
-          elif npm install --prefer-offline --no-audit; then
-            echo "Dependencies installed successfully with npm install!"
-            break
-          else
-            echo "Attempt $i failed, retrying in 10 seconds..."
-            sleep 10
-          fi
-          if [ $i -eq 3 ]; then
-            echo "All attempts failed"
-            exit 1
-          fi
-        done
+    - name: Install dependencies (single attempt)
+      run: npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
       
-    - name: Build application
+    - name: Build for deployment
       run: npm run build
       
-    - name: Check if Vercel secrets are configured
+    - name: Check Vercel configuration
       run: |
         if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then
           echo "⚠️  VERCEL_TOKEN not configured - skipping Vercel deployment"
@@ -90,12 +72,11 @@ jobs:
         vercel-project-id: ${{ secrets.PROJECT_ID }}
         working-directory: ./
         
-    - name: Alternative deployment info
-      if: env.SKIP_VERCEL == 'true'
+    - name: Deployment Summary
       run: |
-        echo "🚀 Build completed successfully!"
-        echo "📦 Your application is ready for deployment"
-        echo "To deploy manually:"
-        echo "1. Run 'npm run build' locally"
-        echo "2. Deploy the .next/ folder to your hosting provider"
-        echo "3. Or configure Vercel secrets for automatic deployment"
+        if [ "$SKIP_VERCEL" == "false" ]; then
+          echo "🚀 Deployment to Vercel completed successfully!"
+        else
+          echo "📦 Build completed - ready for manual deployment"
+          echo "Configure Vercel secrets for automatic deployment"
+        fi
