added debug mode

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,11 @@ on:
         description: 'Git ref to test'
         required: false
         default: 'main'
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
   workflow_call:
     inputs:
       ref:
@@ -14,6 +19,11 @@ on:
         required: false
         type: string
         default: 'main'
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   ci-checks:
@@ -21,6 +31,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Setup Debug Environment
+      if: ${{ inputs.debug_mode == true }}
+      run: |
+        echo "🐛 CI DEBUG MODE ENABLED"
+        echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+        echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
+        echo "NPM_CONFIG_LOGLEVEL=verbose" >> $GITHUB_ENV
+        echo "Debug mode activated for CI workflow"
+        
     - name: Checkout code
       uses: actions/checkout@v4
       with:
@@ -33,7 +52,13 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies (single attempt)
-      run: npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
+      run: |
+        if [ "${{ inputs.debug_mode }}" == "true" ]; then
+          echo "🐛 Installing dependencies with debug output..."
+          npm ci --prefer-offline --verbose || npm install --prefer-offline --verbose
+        else
+          npm ci --prefer-offline --no-audit 2>/dev/null || npm install --prefer-offline --no-audit
+        fi
       
     - name: Run ESLint
       run: |
