--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: boolean
         default: false
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
   workflow_call:
     inputs:
       ref:
@@ -24,6 +29,11 @@ on:
         required: false
         type: boolean
         default: false
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   deploy:
@@ -31,6 +41,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Setup Debug Environment
+      if: ${{ inputs.debug_mode == true }}
+      run: |
+        echo "🐛 DEPLOY DEBUG MODE ENABLED"
+        echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+        echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
+        echo "NPM_CONFIG_LOGLEVEL=verbose" >> $GITHUB_ENV
+        echo "VERCEL_DEBUG=1" >> $GITHUB_ENV
+        echo "Debug mode activated for Deploy workflow"
+        
     - name: Checkout code
       uses: actions/checkout@v4
       with:
