--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -19,6 +19,11 @@ on:
           - 'audit-only'
           - 'codeql-only'
         default: 'all'
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
   workflow_call:
     inputs:
       ref:
@@ -31,12 +36,26 @@ on:
         required: false
         type: string
         default: 'all'
+      debug_mode:
+        description: 'Enable debug logging'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   security-audit:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Setup Debug Environment
+      if: ${{ inputs.debug_mode == true }}
+      run: |
+        echo "🐛 SECURITY DEBUG MODE ENABLED"
+        echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+        echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
+        echo "NPM_CONFIG_LOGLEVEL=verbose" >> $GITHUB_ENV
+        echo "Debug mode activated for Security workflow"
+        
     - name: Checkout code
       uses: actions/checkout@v4
       with:
